--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>EZ Studios - Transformando Crianças em Desenvolvedoras de Elite</title>
+      content="width=device-width, initial-scale=1.0, maximum-scale=1"
+    />
+    <title>
+      EZ Studios - Transformando Crianças em Desenvolvedoras de Elite
+    </title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=JetBrains+Mono:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=JetBrains+Mono:wght@400;600;700&family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       :root {
-        --font-display: 'Space Mono', monospace;
-        --font-heading: 'JetBrains Mono', monospace;
-        --font-body: 'Inter', sans-serif;
+        --font-display: "Space Mono", monospace;
+        --font-heading: "JetBrains Mono", monospace;
+        --font-body: "Inter", sans-serif;
       }
       body {
         font-family: var(--font-body);
       }
-      h1, h2, h3 {
+      h1,
+      h2,
+      h3 {
         font-family: var(--font-heading);
       }
     </style>
@@ -29,7 +36,5 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-
   </body>
-
 </html>
